k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-event-auth
#  annotations:
#    service.beta.kubernetes.io/do-loadbalancer-name: "music-event-auth.com"
#    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "1234-5678-9012-3456"
#    service.beta.kubernetes.io/do-loadbalancer-protocol: "https"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: music-event-auth
  template:
    metadata:
      labels:
        app: music-event-auth
    spec:
      containers:
        - name: music-event-auth
          image: vitaliypunko/music-event-auth:latest
          ports:
            - containerPort: 9090
          resources:
            limits:
              cpu: "0.2"
              memory: "200Mi"
          readinessProbe:
            httpGet:
              path: /auth/actuator/health/readiness
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 3
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /auth/actuator/health/liveness
              port: 9090
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: music-event-auth-service
spec:
  selector:
    app: music-event-auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
  type: ClusterIP
