k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-event-auth-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-test
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - music-event-bot.duckdns.org
      secretName: music-event-bot-tls  # Certificates are stored in music-event-bot-tls secret

  rules:
    - host: music-event-bot.duckdns.org
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: music-event-auth-service
                port:
                  number: 80
